# DeviceDriver

./: .clang-format  .gitignore  Makefile  README.md  inputhandler.c  project_driver.c  wpm_common.h
Test/: NikitaTest.c  WPMTest  ioctl  ioctltest.c  test  testWrite.c  test_block.c  testblock  testdev  testio  testioctl.c  testopen.c  testwpmwrite.c
firmware/: CMakeLists.txt  uniprojfw.c  ws2812.pio
module/: Makefile  project_driver.c
test/: ioctltest.c  testWrite.c  testopen.c
udev/: 50-uniproject.rules  70-rp2350.rules
userapp/: typing_test.c  wpm_common.h
